Fix alignment issues on mobile; navbar dropdown now collapses when clicking a link on mobile

--- a/css/darkly/custom-darkly.css
+++ b/css/darkly/custom-darkly.css
@@ -10,14 +10,19 @@
 @media (max-width: 767px) {
     .navbar-nav .nav-item.active {
         color: white;
-        padding-left: 4rem;
-        margin-left: -2rem;
+        padding-left: 2rem;
+        margin-left: -1rem !important;
         margin-right: -2rem;
         background: rgb(51, 77, 105);
     }
 
     .navbar-nav {
         margin-top: 5px;
+    }
+
+    .navbar-nav .nav-item+.nav-item,
+    .navbar-nav .nav-item {
+        margin-left: 1rem;
     }
 }
 
